ezyplot-x1/force-app/main/default/objects/UK_National_space_standard__c/UK_National_space_standard__c.object-meta.xml
<CustomObject>
    <label>UK National space standard</label>
    <nameField>
        <label>Bedrooms</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UK National space standard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>