ezyplot-x1/force-app/main/default/objects/UK_National_space_standard__c/fields/X1storey__c.field-meta.xml
<CustomField>
    <fullName>X1storey__c</fullName>
    <label>1storey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>