ezyplot-x1/force-app/main/default/objects/UK_National_space_standard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>X1storey__c</columns>
    <columns>X2storey__c</columns>
    <columns>X3storey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>